--- a/static/json/languages/ar_AR.json
+++ b/static/json/languages/ar_AR.json
@@ -87,18 +87,45 @@
     },
     "networks": {
       "mainnet": "الشبكة الرئيسية",
+      "testnet": "شبكة الاختبار",
       "title": "الشبكات",
+      "testnets": "شبكات الاختبار",
       "quick_promo": {
         "text": "اسحب الشبكات لإعادة ترتيبها",
         "text_bold": "نصيحة:"
       },
+      "disabled": "معطل",
       "description": "اختر الشبكات والرموز التي ترغب في عرضها. يمكنك الاتصال بأي شبكات تدعمها Rainbow ، حتى لو لم يتم التحقق منها",
       "developer_tools": {
         "title": "تفعيل أدوات المطور",
         "toggle_explainer": "تفعيل اختصار وضع الاختبار (T) وإضافة مفتاح لقائمة الشاشة الرئيسية في أعلى اليمين."
       },
       "custom_rpc": {
-        "title": "Custom RPC"
+        "title": "إضافة شبكة",
+        "networks": "الشبكات",
+        "network_name": "اسم الشبكة",
+        "rpc_url": "عنوان URL للRPC",
+        "chain_id": "معرّف الشبكة",
+        "symbol": "رمز",
+        "decimals": "الكسور",
+        "active": "نشط",
+        "testnet": "شبكة الاختبار",
+        "block_explorer_url": "رابط مستكشف الكتل",
+        "add_network": "إضافة شبكة",
+        "add_rpc": "إضافة RPC %{rpcName}",
+        "add_asset": "إضافة رمز مخصص",
+        "network_added": "تمت إضافة الشبكة!",
+        "network_added_correctly": "تمت إضافة %{networkName} بنجاح!",
+        "remove_token": "إزالة الرمز",
+        "remove_rpc": "إزالة RPC",
+        "tokens": "رموز",
+        "cant_connect": "لا يمكن الاتصال بهذه النقطة النهائية RPC!",
+        "rpc_not_responding": "الرابط المُقدم لا يستجيب"
+      },
+      "rpc_endpoints": "نقاط نهاية RPC",
+      "enabled": "مُفعّل",
+      "watch_asset": {
+        "title": "مراقبة الأصل"
       }
     },
     "privacy_and_security": {
@@ -225,7 +252,8 @@
       "command_k_internal_shortcuts_enabled": "تفعيل الاختصارات الداخلية ⌘K",
       "custom_rpc": "Custom RPC",
       "new_tab_bar_enabled": "شريط التبويب الجديد",
-      "nfts_enabled": "تم تفعيل NFTs"
+      "nfts_enabled": "تم تفعيل NFTs",
+      "points": "النقاط"
     }
   },
   "transactions": {
@@ -880,7 +908,7 @@
   },
   "seed_verify": {
     "title": "تحقق من العبارة السرية للإستعادة",
-    "explanation": "حدد الكلمات الرابعة ، الثامنة ، والثانية عشرة بالترتيب في عرض العبارة السرية للإستعادة.",
+    "explanation": "اختر كلمات 4، 8، و12 كما تظهر في عبارة الاسترداد السرية",
     "skip": "تخطى هذا"
   },
   "menu": {
@@ -970,6 +998,13 @@
       "title": "من المحتمل أن هذا التطبيق ضار",
       "message": "توقيع الرسائل أو المعاملات من هذا التطبيق قد يؤدي إلى فقدان أصولك"
     },
+    "malicious_transaction_warning": {
+      "title": "هذه المعاملة مشبوهة",
+      "malicious_address": "العنوان الضار متورط في هذه المعاملة. التوقيع قد يؤدي إلى خسائر",
+      "malicious_entity": "كيان ضار متورط في هذه المعاملة. التوقيع قد يؤدي إلى خسائر",
+      "minting_is_a_losing_trade": "عقد احتيال متورط في هذه المعاملة. الإصدار يعتبر خسارة",
+      "you_can_lose_everything": "التوقيع على هذه المعاملة قد يؤدي إلى فقدان كل محتويات المحفظة"
+    },
     "dangerous_request": "طلب خطير",
     "message_signing_request": "طلب التوقيع على الرسالة",
     "message": "رسالة",
@@ -1005,7 +1040,8 @@
     "currency_name": "اسم العملة",
     "currency_decimals": "عشريات العملة",
     "rpc_url": "عنوان RPC",
-    "block_explorer_url": "عنوان مستكشف الكتل"
+    "block_explorer_url": "عنوان مستكشف الكتل",
+    "testnet": "شبكة الاختبار"
   },
   "transaction_fee": {
     "title": "سرعة العملية",
@@ -1085,7 +1121,9 @@
   "errors": {
     "error_encountered": "حدث خطأ. يرجى مشاركة المشكلة مع فريقنا وسنقوم بإصلاحها!",
     "no_wallet_name_set": "لم يتم تحديد اسم المحفظة",
-    "report_error": "الإبلاغ عن المشكلة"
+    "report_error": "الإبلاغ عن المشكلة",
+    "sending_transaction": "خطأ في إرسال المعاملة",
+    "executing_swap": "خطأ في تنفيذ التبديل"
   },
   "common_titles": {
     "before_you_proceed": "قبل أن تتابع"
@@ -1186,6 +1224,7 @@
       "last_sales_price": "سعر البيع الأخير",
       "none": "لا شيء",
       "floor_price": "سعر الأرضية",
+      "description": "الوصف",
       "properties": "الخصائص",
       "address_copied": "العنوان المنسوخ",
       "about": "حول",
@@ -1200,12 +1239,74 @@
       "view_collection": "عرض المجموعة",
       "collection_website": "موقع المجموعة",
       "owners": "المالكون",
-      "unique_owners": "أصحاب فريدين"
+      "unique_owners": "أصحاب فريدين",
+      "ens_profile_info": "معلومات الملف الشخصي",
+      "ens_bio": "السيرة الذاتية",
+      "ens_cover": "الغلاف",
+      "ens_address": "عنوان ETH",
+      "ens_website": "الموقع الإلكتروني",
+      "registered_on": "مسجل في",
+      "expires_in": "ينتهي في",
+      "explainer": {
+        "floor_price_description": "أقل سعر في المجموعة هو أدنى سعر طلب لكل الأغراض المعروضة حاليًا للبيع في مجموعة",
+        "floor_price_title": "أقل سعر للمجموعة",
+        "floor_price_action_label": "فهمت"
+      }
     }
   },
   "points": {
     "coming_soon_header": "قريبًا",
-    "coming_soon_description": "النقاط على بعد خطوة.\nابدأ في الكسب اليوم."
+    "coming_soon_description": "النقاط على بعد خطوة.\nابدأ في الكسب اليوم.",
+    "your_rank": "تصنيفك",
+    "next_drop": "الإصدار القادم",
+    "leaderboard": "سلم المتصدرين",
+    "referral_code": "رمز الإحالة",
+    "referral_code_description": "اكسب النقاط بإحالة الأصدقاء بعد إجرائهم تبادل بقيمة 100 دولار عبر Rainbow",
+    "copied_referral_code": "تم نسخ رمز الإحالة!",
+    "copied_referral_link": "تم نسخ رابط الإحالة!",
+    "out_of": "من أصل %{total}",
+    "out_of_current_total_points": "من إجمالي نقاط %{total} الحالية",
+    "header": "اطلب نقاطك",
+    "description": "النقاط متاحة الآن. اكتشف عدد النقاط التي حصلت عليها",
+    "get_started": "البدء",
+    "use_referral_code": "استخدام رمز الإحالة",
+    "referral_header": "أدخل رمز الإحالة الخاص بك",
+    "referral_description": "أدخل رمز الإحالة أدناه للمطالبة بمكافأتك الإضافية",
+    "referral_code_invalid": "رمز غير صالح",
+    "onboarding": {
+      "authorization_required": "مطلوب تفويض",
+      "sign_in_with_your_wallet": "تسجيل الدخول بمحفظتك",
+      "access_granted": "تم منح الوصول",
+      "calculating_points": "جارٍ احتساب النقاط",
+      "rainbow_swaps": "تبادلات Rainbow:",
+      "rainbow_nfts_owned": "ملكية NFTs في Rainbow:",
+      "wallet_balance": "رصيد المحفظة:",
+      "metamask_swaps": "تبادلات MetaMask:",
+      "bonus_reward": "مكافأة إضافية:",
+      "calculation_complete": "اكتمال الاحتساب",
+      "points_earned": "النقاط المكتسبة:",
+      "bonus_points": "نقاط إضافية:",
+      "claim_description_buy": "للمطالبة ببقية نقاطك الإضافية، احصل على بعض ETH من خلال Rainbow",
+      "claim_description_swap": "للمطالبة ببقية نقاطك الإضافية، قم بعملية تبادل بقيمة 100 دولار على الأقل عبر Rainbow",
+      "account": "الحساب:",
+      "sign_in": "تسجيل الدخول",
+      "get_eth": "احصل على بعض ETH",
+      "try_swap": "جرب الإبدال",
+      "referral_link_ready": "رابط الإحالة الخاص بك جاهز",
+      "share_and_earn": "انشر رابط الإحالة الخاص بك على تويتر واحصل على 250 نقطة إضافية",
+      "plus_percent_of_refers": "بالإضافة إلى ذلك، ستكسب 10% من النقاط التي يحصل عليها أي شخص قمت بإحالته",
+      "share": "شارك في X",
+      "share_tweet": "لقد حصلت للتو على %{points} نقاط رينبو في محفظتي\nالجميع لديهم على الأقل 100 نقطة في انتظارهم، لكن قد يكون لديك أكثر!\n\nادع نقاطك: https://rainbow.me/points?ref=%{referralCode}",
+      "share_tweet_with_metamask_bonus": "لقد حصلت للتو على %{points} نقاط رينبو في محفظتي — ومكافأة إضافية %{metamaskBonus} نقاط لنقل محفظتي ميتاماسك إلى رينبو 🦊 🔫\n\nالجميع لديهم على الأقل 100 نقطة في انتظارهم، لكن قد يكون لديك أكثر! ادع نقاطك: https://rainbow.me/points?ref=%{referralCode}",
+      "registration_complete": "اكتمال التسجيل",
+      "all_set": "كل شيء جاهز!",
+      "keep_earning_by": "استمر في كسب النقاط عبر التبادل، الجسر، الإصدار، إحالة الأصدقاء، والمزيد",
+      "the_more_you_use": "كلما استخدمت Rainbow أكثر، كلما حصلت على مكافآت أكبر"
+    },
+    "error": {
+      "existing_user": "مستخدم حالي",
+      "invalid_referral_code": "رمز إحالة غير صحيح"
+    }
   },
   "speed_up_and_cancel": {
     "speed_up": "تسريع العملية",
@@ -1500,9 +1601,12 @@
   "chain": "السلسلة",
   "nonce": "التردد",
   "copy": "نسخ",
+  "copy_link": "نسخ الرابط",
   "close": "إغلاق",
   "verified": "تم التحقق منه",
   "unverified": "غير متحقق منه",
+  "skip": "تخطِ",
+  "done": "تم",
   "watch_asset": {
     "chain_id": "معرّف الشبكة",
     "symbol": "رمز",
@@ -1511,4 +1615,3 @@
     "not_found": "لم نتمكن من العثور على هذا الأصل على الشبكة المحددة. يرجى اختيار الشبكة الصحيحة أدناه"
   }
 }
-
