--- a/static/json/languages/hi_IN.json
+++ b/static/json/languages/hi_IN.json
@@ -87,18 +87,45 @@
     },
     "networks": {
       "mainnet": "मुख्य नेटवर्क",
+      "testnet": "टेस्टनेट",
       "title": "नेटवर्क",
+      "testnets": "टेस्टनेट्स",
       "quick_promo": {
         "text": "नेटवर्क को पुनर्क्रमित करने के लिए खींचें",
         "text_bold": "युक्ति:"
       },
+      "disabled": "निष्क्रिय",
       "description": "चुनें कि कौन से नेटवर्क और टोकन प्रदर्शित करें। आप Rainbow द्वारा समर्थित किसी भी नेटवर्क से कनेक्ट कर सकते हैं, भले ही वे अनचेक्ड हों।",
       "developer_tools": {
         "title": "डेवलपर टूल सक्षम करें",
         "toggle_explainer": "टेस्टनेट मोड शॉर्टकट (T) सक्षम करता है और होम स्क्रीन के शीर्ष-दाईं मेनू में एक टॉगल जोड़ता है"
       },
       "custom_rpc": {
-        "title": "कस्टम RPC"
+        "title": "नेटवर्क जोड़ें",
+        "networks": "नेटवर्क",
+        "network_name": "नेटवर्क का नाम",
+        "rpc_url": "RPC यूआरएल",
+        "chain_id": "चेन आईडी",
+        "symbol": "प्रतीक",
+        "decimals": "दशमलव",
+        "active": "सक्रिय",
+        "testnet": "टेस्टनेट",
+        "block_explorer_url": "ब्लॉक एक्सप्लोरर URL",
+        "add_network": "नेटवर्क जोड़ें",
+        "add_rpc": "%{rpcName} RPC जोड़ें",
+        "add_asset": "कस्टम टोकन जोड़ें",
+        "network_added": "नेटवर्क जोड़ा गया!",
+        "network_added_correctly": "%{networkName} ठीक से जोड़ा गया है!",
+        "remove_token": "टोकन हटाएं",
+        "remove_rpc": "RPC हटाएं",
+        "tokens": "टोकन्स",
+        "cant_connect": "इस RPC एंडपॉइंट से जुड़ नहीं पा रहे हैं!",
+        "rpc_not_responding": "प्रदान किया गया url प्रतिसाद नहीं दे रहा है"
+      },
+      "rpc_endpoints": "RPC एंडपॉइंट्स",
+      "enabled": "सक्षम",
+      "watch_asset": {
+        "title": "असेट देखें"
       }
     },
     "privacy_and_security": {
@@ -225,7 +252,8 @@
       "command_k_internal_shortcuts_enabled": "⌘K आंतरिक शॉर्टकट्स सक्षम करें",
       "custom_rpc": "कस्टम RPC",
       "new_tab_bar_enabled": "नया टैब बार",
-      "nfts_enabled": "NFTs सक्षम"
+      "nfts_enabled": "NFTs सक्षम",
+      "points": "अंक"
     }
   },
   "transactions": {
@@ -880,7 +908,7 @@
   },
   "seed_verify": {
     "title": "अपना गुप्त फ्रेज कड़वाएँ",
-    "explanation": "अपने गुप्त फ्रेज में क्रमबद्ध ढंग से 4वें, 8वें, और 12वें शब्द का चयन करें।",
+    "explanation": "प्रकाशित संवेदनशील वाक्यांश के 4th, 8th, और 12th शब्दों का चयन करें",
     "skip": "इसे छोड़ें"
   },
   "menu": {
@@ -970,6 +998,13 @@
       "title": "यह ऐप शायद हानिकरक है",
       "message": "इस ऐप से संदेश या लेन-देन हस्ताक्षरण करने के परिणामस्वरूप आपकी संपत्ति खो सकती है"
     },
+    "malicious_transaction_warning": {
+      "title": "यह लेन-देन संदिग्ध लगता है",
+      "malicious_address": "एक हानिकारक पता इस लेन-देन में शामिल है। हस्ताक्षर करने से नुकसान हो सकता है",
+      "malicious_entity": "एक हानिकारक संस्था इस लेन-देन में शामिल है। हस्ताक्षर करने से नुकसान हो सकता है",
+      "minting_is_a_losing_trade": "एक धोखाधड़ी कांट्रैक्ट इस लेनदेन में शामिल है। मिंटिंग नुकसानदेह है",
+      "you_can_lose_everything": "इस लेन-देन का हस्ताक्षर करने से आपके वॉलेट में मौजूदा सभी चीजों को खोने का जोखिम है"
+    },
     "dangerous_request": "आपत्तिजनक अनुरोध",
     "message_signing_request": "संदेश हस्ताक्षर अनुरोध",
     "message": "संदेश",
@@ -1005,7 +1040,8 @@
     "currency_name": "मुद्रा नाम",
     "currency_decimals": "मुद्रा दशमलव",
     "rpc_url": "RPC URL",
-    "block_explorer_url": "ब्लॉक एक्सप्लोरर URL"
+    "block_explorer_url": "ब्लॉक एक्सप्लोरर URL",
+    "testnet": "टेस्टनेट"
   },
   "transaction_fee": {
     "title": "लेनदेन की गति",
@@ -1085,7 +1121,9 @@
   "errors": {
     "error_encountered": "कुछ गलत हो गया। कृपया हमारी टीम के साथ समस्या साझा करें और हम इसे ठीक करेंगे!",
     "no_wallet_name_set": "कोई वॉलेट नाम निर्धारित नहीं है",
-    "report_error": "समस्या रिपोर्ट करें"
+    "report_error": "समस्या रिपोर्ट करें",
+    "sending_transaction": "लेन-देन भेजने में त्रुटि",
+    "executing_swap": "स्वैप क्रियान्वयन में त्रुटि"
   },
   "common_titles": {
     "before_you_proceed": "जारी रखने से पहले"
@@ -1186,6 +1224,7 @@
       "last_sales_price": "अंतिम बिक्री कीमत",
       "none": "कोई नहीं",
       "floor_price": "फ़्लोर की कीमत",
+      "description": "विवरण",
       "properties": "गुण",
       "address_copied": "पता कॉपी किया गया",
       "about": "के बारे में",
@@ -1200,12 +1239,74 @@
       "view_collection": "कलेक्शन देखें",
       "collection_website": "कलेक्शन वेबसाइट",
       "owners": "मालिक",
-      "unique_owners": "अद्वितीय मालिकों"
+      "unique_owners": "अद्वितीय मालिकों",
+      "ens_profile_info": "प्रोफ़ाइल जानकारी",
+      "ens_bio": "बायो",
+      "ens_cover": "कवर",
+      "ens_address": "ईथ ठेका",
+      "ens_website": "वेबसाइट",
+      "registered_on": "पंजीकृत",
+      "expires_in": "समाप्त होता है",
+      "explainer": {
+        "floor_price_description": "संग्रह की निचली कीमत वह न्यूनतम मांग की गई कीमत होती है जो उस संग्रह में बिक्री के लिए उपलब्ध सभी वस्तुओं में से होती है।",
+        "floor_price_title": "संग्रह की न्यूनतम कीमत",
+        "floor_price_action_label": "समझ गया"
+      }
     }
   },
   "points": {
     "coming_soon_header": "जल्द आ रहा है",
-    "coming_soon_description": "अंक बस कोने के पास हैं।\nआज ही कमाना शुरू करें।"
+    "coming_soon_description": "अंक बस कोने के पास हैं।\nआज ही कमाना शुरू करें।",
+    "your_rank": "आपका रैंक",
+    "next_drop": "अगली ड्रॉप",
+    "leaderboard": "लीडरबोर्ड",
+    "referral_code": "रेफरल कोड",
+    "referral_code_description": "दोस्तों को रेफर करें और Rainbow के जरिए $100 अदला-बदली करने पर पॉइंट्स कमाएं",
+    "copied_referral_code": "रेफरल कोड की प्रतिलिपि बनाई गई!",
+    "copied_referral_link": "रेफरल लिंक की प्रतिलिपि बनाई गई!",
+    "out_of": "%{total}में से",
+    "out_of_current_total_points": "%{total} कुल अंकों में से",
+    "header": "अपने पॉइंट्स का दावा करें",
+    "description": "पॉइंट्स यहां हैं। जानिए आपको कितने पॉइंट्स मिले हैं।",
+    "get_started": "आरंभ करें",
+    "use_referral_code": "रेफरल कोड का प्रयोग करें",
+    "referral_header": "अपना रेफरल कोड दर्ज करें",
+    "referral_description": "बोनस इनाम का दावा करने के लिए नीचे रेफरल कोड दर्ज करें",
+    "referral_code_invalid": "अवैध कोड",
+    "onboarding": {
+      "authorization_required": "अनुमति आवश्यक है",
+      "sign_in_with_your_wallet": "अपने वॉलेट से साइन इन करें",
+      "access_granted": "पहुंच अनुमति दी गई",
+      "calculating_points": "पॉइंट्स की गणना हो रही है",
+      "rainbow_swaps": "रेनबो स्वैप्स:",
+      "rainbow_nfts_owned": "रेनबो NFTs का स्वामित्व:",
+      "wallet_balance": "वॉलेट बैलेंस:",
+      "metamask_swaps": "मेटामास्क स्वैप्स:",
+      "bonus_reward": "बोनस इनाम:",
+      "calculation_complete": "गणना पूरी हुई",
+      "points_earned": "अर्जित अंक:",
+      "bonus_points": "बोनस अंक:",
+      "claim_description_buy": "अपने बोनस अंकों का शेष दावा करने के लिए, रेनबो के माध्यम से कुछ ETH प्राप्त करें।",
+      "claim_description_swap": "अपने बोनस अंकों का शेष दावा करने के लिए, रेनबो के माध्यम से कम से कम $100 स्वैप करें।",
+      "account": "अकाउंट:",
+      "sign_in": "साइन इन करें",
+      "get_eth": "कुछ ETH प्राप्त करें",
+      "try_swap": "स्वैप करके देखें",
+      "referral_link_ready": "आपका रेफरल लिंक तैयार है",
+      "share_and_earn": "अपना रेफरल लिंक ट्वीट करें और 250 अंक अतिरिक्त प्राप्त करें",
+      "plus_percent_of_refers": "प्लस आप जिसे रेफर करेंगे उसके द्वारा कमाए गए अंकों का 10% भी कमाएँगे",
+      "share": "X को शेयर करें",
+      "share_tweet": "मेरे वॉलेट में अभी-अभी %{points} रेनबो पॉइंट्स आये\nहर किसी के पास कम से कम 100 पॉइंट्स हैं, पर आपके पास और भी हो सकते हैं!\n\nअपने ड्रॉप का दावा करें: https://rainbow.me/points?ref=%{referralCode}",
+      "share_tweet_with_metamask_bonus": "मेरे वॉलेट में अभी-अभी %{points} रेनबो पॉइंट्स आये — और साथ में अतिरिक्त %{metamaskBonus} पॉइंट्स बोनस के रूप में जैसे कि मैंने अपना मेटामास्क वॉलेट रेनबो में माइग्रेट किया है 🦊 🔫\n\nहर किसी के पास कम से कम 100 पॉइंट्स हैं, पर आपके पास और भी हो सकते हैं! अपने ड्रॉप का दावा करें: https://rainbow.me/points?ref=%{referralCode}",
+      "registration_complete": "पंजीकरण पूरा हुआ",
+      "all_set": "आप तैयार हैं!",
+      "keep_earning_by": "स्वैपिंग, ब्रिजिंग, मिंटिंग, दोस्तों को रेफर करके, और अधिक करके अंक कमाते रहें",
+      "the_more_you_use": "Rainbow का अधिक प्रयोग करें, अधिक इनाम पाएं"
+    },
+    "error": {
+      "existing_user": "मौजूदा उपयोगकर्ता",
+      "invalid_referral_code": "अवैध रेफ़रल कोड"
+    }
   },
   "speed_up_and_cancel": {
     "speed_up": "गति बढ़ाएं",
@@ -1500,9 +1601,12 @@
   "chain": "श्रृंखला",
   "nonce": "नॉन्स",
   "copy": "कॉपी करें",
+  "copy_link": "लिंक कॉपी करें",
   "close": "बंद करें",
   "verified": "सत्यापित",
   "unverified": "अप्रमाणित",
+  "skip": "छोड़ें",
+  "done": "हो गया",
   "watch_asset": {
     "chain_id": "चेन आईडी",
     "symbol": "प्रतीक",
@@ -1511,4 +1615,3 @@
     "not_found": "हमें इस एसेट को चुने गए नेटवर्क पर नहीं मिला। कृपया नीचे सही नेटवर्क चुनें।"
   }
 }
-
