--- a/static/json/languages/ru_RU.json
+++ b/static/json/languages/ru_RU.json
@@ -87,18 +87,45 @@
     },
     "networks": {
       "mainnet": "Основная сеть",
+      "testnet": "Тестнет",
       "title": "Сети",
+      "testnets": "Тестнеты",
       "quick_promo": {
         "text": "Перетаскивайте сети для изменения их порядка",
         "text_bold": "Совет:"
       },
+      "disabled": "Отключено",
       "description": "Выберите, какие сети и токены отображать. Вы можете подключиться к любым сетям, поддерживаемым Rainbow, даже если они не отмечены.",
       "developer_tools": {
         "title": "Включить инструменты разработчика",
         "toggle_explainer": "Включает ярлык режима Testnet (T) и добавляет переключатель в верхнее правое меню главного экрана"
       },
       "custom_rpc": {
-        "title": "Пользовательский RPC"
+        "title": "Добавить сеть",
+        "networks": "Сети",
+        "network_name": "Имя сети",
+        "rpc_url": "URL RPC",
+        "chain_id": "Идентификатор сети",
+        "symbol": "Символ",
+        "decimals": "Десятичные знаки",
+        "active": "Активен",
+        "testnet": "Тестнет",
+        "block_explorer_url": "URL блок-эксплорера",
+        "add_network": "Добавить сеть",
+        "add_rpc": "Добавить %{rpcName} RPC",
+        "add_asset": "Добавить пользовательский токен",
+        "network_added": "Сеть добавлена!",
+        "network_added_correctly": "%{networkName} корректно добавлен!",
+        "remove_token": "Удалить токен",
+        "remove_rpc": "Удалить RPC",
+        "tokens": "Токены",
+        "cant_connect": "Не удается подключиться к этому RPC-эндпойнту!",
+        "rpc_not_responding": "Предоставленный URL не отвечает"
+      },
+      "rpc_endpoints": "RPC-конечные точки",
+      "enabled": "Включено",
+      "watch_asset": {
+        "title": "Отслеживать актив"
       }
     },
     "privacy_and_security": {
@@ -225,7 +252,8 @@
       "command_k_internal_shortcuts_enabled": "Включить внутренние ярлыки ⌘K",
       "custom_rpc": "Пользовательский RPC",
       "new_tab_bar_enabled": "Новая панель вкладок",
-      "nfts_enabled": "NFTs Включено"
+      "nfts_enabled": "NFTs Включено",
+      "points": "Поинты"
     }
   },
   "transactions": {
@@ -880,7 +908,7 @@
   },
   "seed_verify": {
     "title": "Подтвердите свою секретную фразу восстановления",
-    "explanation": "Выберите 4-ое, 8-ое и 12-ое слова в том порядке, в котором они отображаются в вашей секретной фразе восстановления.",
+    "explanation": "Выберите 4-е, 8-е и 12-е слова в порядке, в котором они отображаются в вашей секретной фразе восстановления",
     "skip": "Пропустить"
   },
   "menu": {
@@ -970,6 +998,13 @@
       "title": "Это приложение вероятно вредоносное",
       "message": "Подписывая сообщения или транзакции от этого приложения, вы можете потерять свои средства"
     },
+    "malicious_transaction_warning": {
+      "title": "Эта транзакция выглядит подозрительно",
+      "malicious_address": "В эту транзакцию вовлечен вредоносный адрес. Подпись может привести к потерям",
+      "malicious_entity": "В эту транзакцию вовлечено вредоносное существо. Подпись может привести к потерям",
+      "minting_is_a_losing_trade": "В эту транзакцию вовлечен мошеннический контракт. Чеканка является убыточной сделкой",
+      "you_can_lose_everything": "Подписание этой транзакции может привести к потере доступа ко всему содержимому вашего кошелька"
+    },
     "dangerous_request": "Опасный запрос",
     "message_signing_request": "Запрос на подпись сообщения",
     "message": "Сообщение",
@@ -1005,7 +1040,8 @@
     "currency_name": "Наименование валюты",
     "currency_decimals": "Количество знаков после запятой",
     "rpc_url": "URL RPC",
-    "block_explorer_url": "URL исследователя блока"
+    "block_explorer_url": "URL исследователя блока",
+    "testnet": "Тестнет"
   },
   "transaction_fee": {
     "title": "Скорость транзакции",
@@ -1085,7 +1121,9 @@
   "errors": {
     "error_encountered": "Что-то пошло не так. Пожалуйста, сообщите о проблеме нашей команде и мы это исправим!",
     "no_wallet_name_set": "Не указано имя кошелька",
-    "report_error": "Сообщить о проблеме"
+    "report_error": "Сообщить о проблеме",
+    "sending_transaction": "Ошибка при отправке транзакции",
+    "executing_swap": "Ошибка при выполнении обмена"
   },
   "common_titles": {
     "before_you_proceed": "Перед тем, как продолжить"
@@ -1186,6 +1224,7 @@
       "last_sales_price": "Последняя цена продажи",
       "none": "Нет",
       "floor_price": "Минимальная цена",
+      "description": "Описание",
       "properties": "Свойства",
       "address_copied": "Адрес скопирован",
       "about": "Описание",
@@ -1200,12 +1239,74 @@
       "view_collection": "Просмотр коллекции",
       "collection_website": "Веб-сайт коллекции",
       "owners": "Владельцы",
-      "unique_owners": "Уникальные владельцы"
+      "unique_owners": "Уникальные владельцы",
+      "ens_profile_info": "Информация профиля",
+      "ens_bio": "Био",
+      "ens_cover": "Обложка",
+      "ens_address": "ETH адрес",
+      "ens_website": "Веб-сайт",
+      "registered_on": "Зарегистрирован",
+      "expires_in": "Истекает через",
+      "explainer": {
+        "floor_price_description": "Наименьшая цена коллекции - это самая низкая цена предложения по всем предметам, которые в настоящее время продаются в коллекции",
+        "floor_price_title": "Наименьшая цена коллекции",
+        "floor_price_action_label": "Понятно"
+      }
     }
   },
   "points": {
     "coming_soon_header": "Скоро будет",
-    "coming_soon_description": "Поинты уже почти у вас.\nНачните зарабатывать сегодня."
+    "coming_soon_description": "Поинты уже почти у вас.\nНачните зарабатывать сегодня.",
+    "your_rank": "Ваш ранг",
+    "next_drop": "Следующий дроп",
+    "leaderboard": "Лидеры",
+    "referral_code": "Реферальный код",
+    "referral_code_description": "Зарабатывайте баллы за реферальство друзей после того, как они обменяют $100 через Rainbow",
+    "copied_referral_code": "Реферальный код скопирован!",
+    "copied_referral_link": "Реферальная ссылка скопирована!",
+    "out_of": "Из %{total}",
+    "out_of_current_total_points": "Из %{total} текущего общего количества очков",
+    "header": "Получить ваши баллы",
+    "description": "Баллы здесь. Узнайте, сколько вам начислено",
+    "get_started": "Начать",
+    "use_referral_code": "Использовать реферальный код",
+    "referral_header": "Введите ваш реферальный код",
+    "referral_description": "Введите реферальный код ниже, чтобы получить бонусное вознаграждение",
+    "referral_code_invalid": "Недействительный код",
+    "onboarding": {
+      "authorization_required": "Требуется авторизация",
+      "sign_in_with_your_wallet": "Войдите, используя ваш кошелек",
+      "access_granted": "Доступ открыт",
+      "calculating_points": "Идет расчет баллов",
+      "rainbow_swaps": "Обмен через Rainbow:",
+      "rainbow_nfts_owned": "NFT владения Rainbow:",
+      "wallet_balance": "Баланс кошелька:",
+      "metamask_swaps": "Обмен через MetaMask:",
+      "bonus_reward": "Бонусное вознаграждение:",
+      "calculation_complete": "Расчет завершен",
+      "points_earned": "Баллы заработаны:",
+      "bonus_points": "Бонусные баллы:",
+      "claim_description_buy": "Чтобы получить остальные бонусные баллы, купите ETH через Rainbow",
+      "claim_description_swap": "Чтобы получить остальные бонусные баллы, совершите обмен хотя бы на $100 через Rainbow",
+      "account": "Аккаунт:",
+      "sign_in": "Войти",
+      "get_eth": "Купить ETH",
+      "try_swap": "Попробовать обмен",
+      "referral_link_ready": "Ваша реферальная ссылка готова",
+      "share_and_earn": "Отправьте свою реферальную ссылку в Твиттер и получите дополнительно 250 баллов",
+      "plus_percent_of_refers": "Плюс вы будете получать 10% от баллов, заработанных любым человеком, который пришел по вашей рекомендации",
+      "share": "Поделиться X",
+      "share_tweet": "Только что на мой кошелек зачислили %{points} Rainbow Points\nУ всех есть минимум 100 очков в ожидании, но у вас может быть больше!\n\nЗаберите свои очки: https://rainbow.me/points?ref=%{referralCode}",
+      "share_tweet_with_metamask_bonus": "Только что на мой кошелек зачислили %{points} Rainbow Points и дополнительно %{metamaskBonus} очков в качестве бонуса за переход с MetaMask в Rainbow 🦊 🔫\n\nУ всех есть минимум 100 очков в ожидании, но у вас может быть больше! Заберите свои очки: https://rainbow.me/points?ref=%{referralCode}",
+      "registration_complete": "Регистрация завершена",
+      "all_set": "Все готово!",
+      "keep_earning_by": "Продолжайте зарабатывать баллы, обменивая, переводя, создавая, рекомендуя друзей и другое",
+      "the_more_you_use": "Чем больше вы используете Rainbow, тем больше будет награда"
+    },
+    "error": {
+      "existing_user": "Существующий пользователь",
+      "invalid_referral_code": "Недействительный реферальный код"
+    }
   },
   "speed_up_and_cancel": {
     "speed_up": "Ускорить",
@@ -1500,9 +1601,12 @@
   "chain": "Сеть",
   "nonce": "Нонс",
   "copy": "Копировать",
+  "copy_link": "Копировать Ссылку",
   "close": "Закрыть",
   "verified": "Проверенные",
   "unverified": "Непроверенные",
+  "skip": "Пропустить",
+  "done": "Готово",
   "watch_asset": {
     "chain_id": "Идентификатор сети",
     "symbol": "Символ",
@@ -1511,4 +1615,3 @@
     "not_found": "Мы не смогли найти этот актив на выбранной сети. Пожалуйста, выберите правильную сеть ниже"
   }
 }
-
