--- a/static/json/languages/th_TH.json
+++ b/static/json/languages/th_TH.json
@@ -87,18 +87,45 @@
     },
     "networks": {
       "mainnet": "เครือข่ายหลัก",
+      "testnet": "เทสต์เน็ต",
       "title": "เครือข่าย",
+      "testnets": "เทสต์เน็ตส์",
       "quick_promo": {
         "text": "ลากเครือข่ายเพื่อจัดเรียง",
         "text_bold": "เคล็ดลับ:"
       },
+      "disabled": "ปิดการใช้งาน",
       "description": "เลือกเครือข่ายและโทเคนที่จะแสดง คุณสามารถเชื่อมต่อกับเครือข่ายที่ Rainbow รองรับได้ แม้จะไม่ได้เลือก",
       "developer_tools": {
         "title": "เปิดใช้งานเครื่องมือนักพัฒนา",
         "toggle_explainer": "เปิดใช้งานทางลัดโหมด Testnet (T) และเพิ่มสลับที่หน้าจอหลักสุดขวาบน"
       },
       "custom_rpc": {
-        "title": "Custom RPC"
+        "title": "เพิ่มเครือข่าย",
+        "networks": "เครือข่าย",
+        "network_name": "ชื่อเครือข่าย",
+        "rpc_url": "URL ของ RPC",
+        "chain_id": "รหัสเครือข่าย",
+        "symbol": "สัญลักษณ์",
+        "decimals": "ทศนิยม",
+        "active": "กำลังใช้งาน",
+        "testnet": "เทสต์เน็ต",
+        "block_explorer_url": "URL เบราว์เซอร์บล็อก",
+        "add_network": "เพิ่มเครือข่าย",
+        "add_rpc": "เพิ่ม RPC %{rpcName}",
+        "add_asset": "เพิ่มโทเค็นที่กำหนดเอง",
+        "network_added": "เครือข่ายถูกเพิ่มแล้ว!",
+        "network_added_correctly": "%{networkName} ได้ถูกเพิ่มอย่างถูกต้องแล้ว!",
+        "remove_token": "ลบโทเค็น",
+        "remove_rpc": "ลบ RPC",
+        "tokens": "โทเคน",
+        "cant_connect": "ไม่สามารถเชื่อมต่อกับจุดปลายทาง RPC นี้ได้",
+        "rpc_not_responding": "url ที่ให้มาไม่สามารถตอบสนองได้"
+      },
+      "rpc_endpoints": "จุดปลายทาง RPC",
+      "enabled": "เปิดใช้งาน",
+      "watch_asset": {
+        "title": "ดูสินทรัพย์"
       }
     },
     "privacy_and_security": {
@@ -225,7 +252,8 @@
       "command_k_internal_shortcuts_enabled": "เปิดใช้งาน ⌘K Shortcut ภายใน",
       "custom_rpc": "Custom RPC",
       "new_tab_bar_enabled": "แถบแท็บใหม่",
-      "nfts_enabled": "เปิดใช้งาน NFTs"
+      "nfts_enabled": "เปิดใช้งาน NFTs",
+      "points": "คะแนน"
     }
   },
   "transactions": {
@@ -880,7 +908,7 @@
   },
   "seed_verify": {
     "title": "ตรวจสอบวลีการกู้คืนลับของคุณ",
-    "explanation": "เลือกคำที่ 4, 8, และ 12 ตามลำดับที่แสดงในวลีการกู้คืนลับของคุณ",
+    "explanation": "เลือกคำที่ 4, 8, และ 12 ตามลำดับที่วลีกู้คืนแสดง",
     "skip": "ข้ามขั้นตอนนี้"
   },
   "menu": {
@@ -970,6 +998,13 @@
       "title": "แอปนี้มีแนวโน้มเป็นมัลแวร์",
       "message": "การทำธุรกรรมหรือเซ็นข้อความจากแอปนี้อาจทำให้คุณสูญเสียสินทรัพย์"
     },
+    "malicious_transaction_warning": {
+      "title": "ธุรกรรมนี้ดูน่าสงสัย",
+      "malicious_address": "มีการเกี่ยวข้องของที่อยู่ที่เป็นอันตรายในธุรกรรมนี้ การลงชื่ออาจทำให้เกิดการสูญเสีย",
+      "malicious_entity": "มีบุคคลอันตรายเกี่ยวข้องในธุรกรรมนี้ การลงชื่ออาจทำให้เกิดการสูญเสีย",
+      "minting_is_a_losing_trade": "มีสัญญาการหลอกลวงเกี่ยวข้องในธุรกรรมนี้ การปั๊มทำให้เสียเปรียบ",
+      "you_can_lose_everything": "การลงชื่อธุรกรรมนี้อาจทำให้สูญเสียสิทธิ์ในทุกอย่างในกระเป๋าเงินของคุณ"
+    },
     "dangerous_request": "คำขอที่เสี่ยงต่อความปลอดภัย",
     "message_signing_request": "คำขอลงนามข้อความ",
     "message": "ข้อความ",
@@ -1005,7 +1040,8 @@
     "currency_name": "ชื่อสกุลเงิน",
     "currency_decimals": "จำนวนทศนิยมของสกุลเงิน",
     "rpc_url": "URL RPC",
-    "block_explorer_url": "URL Block Explorer"
+    "block_explorer_url": "URL Block Explorer",
+    "testnet": "เทสต์เน็ต"
   },
   "transaction_fee": {
     "title": "ความเร็วของธุรกรรม",
@@ -1085,7 +1121,9 @@
   "errors": {
     "error_encountered": "มีบางอย่างผิดพลาด กรุณาแชร์ปัญหานี้กับทีมของเราและเราจะแก้ไข!",
     "no_wallet_name_set": "ไม่ได้ตั้งชื่อวอลเล็ต",
-    "report_error": "รายงานปัญหา"
+    "report_error": "รายงานปัญหา",
+    "sending_transaction": "เกิดข้อผิดพลาดในการส่งธุรกรรม",
+    "executing_swap": "เกิดข้อผิดพลาดในการแลกเปลี่ยน"
   },
   "common_titles": {
     "before_you_proceed": "ก่อนที่คุณจะดำเนินการต่อ"
@@ -1186,6 +1224,7 @@
       "last_sales_price": "ราคาขายล่าสุด",
       "none": "ไม่มี",
       "floor_price": "ราคาฟลอร์",
+      "description": "คำอธิบาย",
       "properties": "คุณสมบัติ",
       "address_copied": "คัดลอกที่อยู่แล้ว",
       "about": "เกี่ยวกับ",
@@ -1200,12 +1239,74 @@
       "view_collection": "ดูคลัง",
       "collection_website": "เว็บไซต์คลัง",
       "owners": "เจ้าของ",
-      "unique_owners": "เจ้าของที่ไม่ซ้ำหน้า"
+      "unique_owners": "เจ้าของที่ไม่ซ้ำหน้า",
+      "ens_profile_info": "ข้อมูลโปรไฟล์",
+      "ens_bio": "ไบโอ",
+      "ens_cover": "ปก",
+      "ens_address": "ที่อยู่ Ethereum",
+      "ens_website": "เว็บไซต์",
+      "registered_on": "ลงทะเบียนเมื่อ",
+      "expires_in": "หมดอายุใน",
+      "explainer": {
+        "floor_price_description": "ราคาต่ำสุดของคอลเลกชันคือราคาที่ถามต่ำสุดในรายการที่วางขายอยู่ในคอลเลกชัน",
+        "floor_price_title": "ราคาพื้นคอลเลกชั่น",
+        "floor_price_action_label": "เข้าใจแล้ว"
+      }
     }
   },
   "points": {
     "coming_soon_header": "เร็วๆนี้",
-    "coming_soon_description": "คะแนนอยู่ใกล้แค่เอื้อม\nเริ่มสะสมวันนี้"
+    "coming_soon_description": "คะแนนอยู่ใกล้แค่เอื้อม\nเริ่มสะสมวันนี้",
+    "your_rank": "อันดับของคุณ",
+    "next_drop": "ดรอปถัดไป",
+    "leaderboard": "ลีดเดอร์บอร์ด",
+    "referral_code": "รหัสอ้างอิง",
+    "referral_code_description": "ได้คะแนนจากการแนะนำเพื่อน เมื่อพวกเขาทำการแลกเปลี่ยน $100 ผ่าน Rainbow",
+    "copied_referral_code": "คัดลอกรหัสอ้างอิงแล้ว!",
+    "copied_referral_link": "คัดลอกลิงก์อ้างอิงแล้ว!",
+    "out_of": "จากทั้งหมด %{total}",
+    "out_of_current_total_points": "จากทั้งหมด %{total} คะแนนปัจจุบัน",
+    "header": "เรียกร้องคะแนนของคุณ",
+    "description": "คะแนนมาแล้ว ดูว่าคุณได้รับไปเท่าไร",
+    "get_started": "เริ่มต้นใช้งาน",
+    "use_referral_code": "ใช้โค้ดแนะนำ",
+    "referral_header": "กรอกโค้ดแนะนำของคุณ",
+    "referral_description": "กรอกโค้ดแนะนำด้านล่างเพื่อรับโบนัส",
+    "referral_code_invalid": "โค้ดไม่ถูกต้อง",
+    "onboarding": {
+      "authorization_required": "จำเป็นต้องมีการยืนยัน",
+      "sign_in_with_your_wallet": "เข้าสู่ระบบด้วยกระเป๋าเงินของคุณ",
+      "access_granted": "เข้าถึงได้แล้ว",
+      "calculating_points": "กำลังคำนวณคะแนน",
+      "rainbow_swaps": "แลกเปลี่ยน Rainbow:",
+      "rainbow_nfts_owned": "NFTs ที่เป็นเจ้าของใน Rainbow:",
+      "wallet_balance": "ยอดเงินในกระเป๋า:",
+      "metamask_swaps": "การแลกเปลี่ยน MetaMask:",
+      "bonus_reward": "รางวัลโบนัส:",
+      "calculation_complete": "คำนวณเสร็จสิ้น",
+      "points_earned": "คะแนนที่ได้รับ:",
+      "bonus_points": "คะแนนโบนัส:",
+      "claim_description_buy": "เพื่อรับคะแนนโบนัสที่เหลือ กรุณาซื้อ ETH ผ่าน Rainbow",
+      "claim_description_swap": "เพื่อรับคะแนนโบนัสที่เหลือ ทำการสวอปอย่างน้อย $100 ผ่าน Rainbow",
+      "account": "บัญชี:",
+      "sign_in": "เข้าสู่ระบบ",
+      "get_eth": "ได้รับ ETH",
+      "try_swap": "ลองแลกเปลี่ยน",
+      "referral_link_ready": "ลิงค์อ้างอิงของคุณพร้อมแล้ว",
+      "share_and_earn": "ทวีตลิงค์อ้างอิงของคุณและได้รับ 250 คะแนนเพิ่ม",
+      "plus_percent_of_refers": "คุณจะได้รับ 10% ของคะแนนจากการอ้างอิงไปยังบุคคลอื่น",
+      "share": "แชร์ไปยัง X",
+      "share_tweet": "ฉันเพิ่งได้ %{points} แต้ม Rainbow หล่นเข้ากระเป๋าเงินของฉัน\nทุกคนมีอย่างน้อย 100 แต้มที่รออยู่, แต่คุณอาจมีมากกว่านั้น!\n\nรับแต้มของคุณ: https://rainbow.me/points?ref=%{referralCode}",
+      "share_tweet_with_metamask_bonus": "ฉันเพิ่งได้ %{points} แต้ม Rainbow หล่นเข้ากระเป๋า — พร้อมโบนัสเพิ่มเติม %{metamaskBonus} แต้มจากการย้าย MetaMask ของฉันเข้า Rainbow 🦊 🔫\n\nทุกคนมีอย่างน้อย 100 แต้มที่รออยู่, แต่คุณอาจมีมากกว่านั้น! รับแต้มของคุณ: https://rainbow.me/points?ref=%{referralCode}",
+      "registration_complete": "การลงทะเบียนเสร็จสมบูรณ์",
+      "all_set": "คุณได้พร้อมทั้งหมดแล้ว!",
+      "keep_earning_by": "คงไว้คะแนนโดยการแลกเปลี่ยน สะพาน สร้างสกุลเงิน แนะนำเพื่อน และอื่นๆ",
+      "the_more_you_use": "ยิ่งใช้ Rainbow มากเท่าไหร่ ก็ยิ่งได้รับรางวัลมากขึ้น"
+    },
+    "error": {
+      "existing_user": "ผู้ใช้เดิม",
+      "invalid_referral_code": "รหัสแนะนำไม่ถูกต้อง"
+    }
   },
   "speed_up_and_cancel": {
     "speed_up": "เร่ง",
@@ -1500,9 +1601,12 @@
   "chain": "เชื่อมโยง",
   "nonce": "Nonce",
   "copy": "คัดลอก",
+  "copy_link": "คัดลอกลิงก์",
   "close": "ปิด",
   "verified": "ได้รับการตรวจสอบ",
   "unverified": "ไม่ได้รับการตรวจสอบ",
+  "skip": "ข้าม",
+  "done": "เสร็จสิ้น",
   "watch_asset": {
     "chain_id": "รหัสเครือข่าย",
     "symbol": "สัญลักษณ์",
@@ -1511,4 +1615,3 @@
     "not_found": "เราไม่พบสินทรัพย์เหล่านี้ในเครือข่ายที่เลือก โปรดเลือกเครือข่ายที่ถูกต้องด้านล่าง"
   }
 }
-
